--- a/inst/ft3_pkg/assignments/html_doc/index.Rmd
+++ b/inst/ft3_pkg/assignments/html_doc/index.Rmd
@@ -1,17 +1,17 @@
 ---
-title: javascript on_load example
-output: html_fragment
+title: html_document example
+output: html_document
 params:
   flexTeaching_pars:
     value:
       solutions: true
   flexTeaching:
     value:
-      menu: javascript on_load example
-      seed_salt: ifx60q1th7joxa3mx7et
-      data_salt: 21in0vpwi1ijmcb6ovwp
-      hide_before: 10:13 2023-03-28
-      restrict_before: 10:13 2023-03-28
+      menu: html_document example
+      seed_salt: d54srxesjsxdpqepmhsy
+      data_salt: dg2ylzxk1ad8x013qrrf
+      hide_before: 09:32 2023-03-28
+      restrict_before: 09:32 2023-03-28
       files:
         assignment_data.csv:
           label: Data
@@ -40,6 +40,22 @@ my_data = sleep
 write.csv(my_data, 'assignment_data.csv', row.names = FALSE)
 
 ```
+
+The following useful values have been passed into the document via `params$`. In practice, you'll typically only need to use `params$flexTeaching_pars$solutions` (but see the jdenticon example).
+
+```{r}
+params$flexTeaching_pars |> 
+  Filter(Negate(is.null), x = _) |>
+  stack() -> pars
+
+pars <- pars[,c(2,1)]
+colnames(pars) = c('Name', 'Value')
+pars[,1] = paste0('`params$flexTeaching_pars$', pars[,1],'`')
+
+pars |>
+  knitr::kable()
+```
+
 
 ## This is an example section.
 
