ensure error assignment is sorted after others

--- a/inst/ft3_pkg/assignments/compile_error/index.Rmd
+++ b/inst/ft3_pkg/assignments/compile_error/index.Rmd
@@ -11,6 +11,7 @@ params:
       category: examples
       seed_salt: 0i07gc8ie16dp0n6epku
       data_salt: qspjx0k1y2vg5h5fylo4
+      sortkey: zzz
 ---
 
 This document only exists to show what happens when the compilation of a document causes an error.
