remove self_contained: false from surveyjsR example

--- a/inst/ft3_pkg/assignments/Qzus/index.Rmd
+++ b/inst/ft3_pkg/assignments/Qzus/index.Rmd
@@ -1,8 +1,6 @@
 ---
 title: Quiz using surveyjs
-output: 
-  html_document:
-    self_contained: false
+output: html_document
 params:
   flexTeaching_pars:
     value:
